--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,12 +18,32 @@ android {
     }
 }
 
+
+def supportVersion = '28.0.0'
+def constraintVersion = '1.0.2'
+def okhttpVersion = '3.9.1'
+def retrofitVersion = '2.3.0'
+def multidexVersion = '1.0.3'
+def archVersion = '1.1.1'
+def stethoVersion = '1.5.0'
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
+
+
+    //  Dagger Dependencies
+    def daggerVersion = '2.16'
+    annotationProcessor "com.google.dagger:dagger-compiler:$daggerVersion"
+    annotationProcessor "com.google.dagger:dagger-android-processor:$daggerVersion"
+    implementation "com.google.dagger:dagger:$daggerVersion"
+    implementation "com.google.dagger:dagger-android:$daggerVersion"
+    implementation "com.google.dagger:dagger-android-support:$daggerVersion"
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
